welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:2: error: not found: value marque
override def run() {avance();marque();avance();gauche();avance();marque();recule();droite();avance();marque();avance();gauche();} 
                             ^PictureMono:2: error: not found: value marque
override def run() {avance();marque();avance();gauche();avance();marque();recule();droite();avance();marque();avance();gauche();} 
                                                                 ^PictureMono:2: error: not found: value marque
override def run() {avance();marque();avance();gauche();avance();marque();recule();droite();avance();marque();avance();gauche();} 
                                                                                                     ^